Aress7/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>About__c</fullName>
        <description>Information about the contact, articles, lnkedin details, images, websites etc</description>
        <label>About</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capsule_Import_ID__c</fullName>
        <label>Capsule Import ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capsule_Import_Zen_ID__c</fullName>
        <label>Capsule Import Zen_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Marketing_Focus__c</fullName>
        <inlineHelpText>This field defines what marketing a particular person will receive. By default it is set to inherit this from the account. -</inlineHelpText>
        <label>Contact Marketing Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Home Strategic</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Strategic</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Destination Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldAware_ID__c</fullName>
        <label>FieldAware ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAware_URL__c</fullName>
        <label>FieldAware URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Has_a_PP_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if the customer has a PP Home unit installed</inlineHelpText>
        <label>Has a PP Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Charge_Install_Date__c</fullName>
        <inlineHelpText>Enter the date the home charge was installed</inlineHelpText>
        <label>Home Charge Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>bt_stripe__Default_Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set from the related Default Payment Method&apos;s Payment Gateway.</description>
        <inlineHelpText>This field is automatically set from the related Default Payment Method&apos;s Payment Gateway.</inlineHelpText>
        <label>Default Payment Gateway</label>
        <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bt_stripe__Default_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Latest payment method will be automatically populated, but can be updated.</description>
        <inlineHelpText>Latest payment method will be automatically populated, but can be updated.</inlineHelpText>
        <label>Default Payment Method</label>
        <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Test_Mailout_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
            <value>marketingteam@pod-point.com</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Marketing Test</value>
        </filters>
        <label>Test Mailout View</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>